<?xml version="1.0"?>
<package format="2">
  <name>hero_chassis_controller</name>
  <version>0.1.0</version>
  <description>A template for ROS packages.</description>
  <maintainer email="1714148437@qq.com">BlanchardLj</maintainer>
  <license>BSD</license>
  <author email="1714148437@qq.com">BlanchardLj</author>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- build_depend: dependencies only used in source files -->
  <!-- depend: build, export, and execution dependency -->
  <depend>roscpp</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>forward_command_controller</depend>
  <depend>roslint</depend>
  <depend>rm_description</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
    <controller_interface plugin="${prefix}/hero_chassis_controller_plugins.xml"/>
  </export>
</package>
